# zpp

./: .gitignore  .gitmodules  CMakeConfig.h.in  CMakeLists.txt  LICENSE  README.md  readme.org  release_history.org  zbuild.py
builder/: __init__.py  conanfile.py  zpp.py
doc/: README.zh.md  hpx.ini  hpx.reference.ini  server.json  slurm.conf
doc/en/: build.org  development.org  hpx.org  readme.org
doc/zh-CN/: HPX封装指南.org  hpx.ini  readme.org  release_history.org  开发指南.org  构建指南.org
examples/: CMakeLists.txt
examples/core/: CMakeLists.txt  coroutine_examples.cpp  coroutine_examples.h  main.cpp
examples/folly/: CMakeLists.txt
examples/folly/examples/: CMakeLists.txt  executor_example.cpp  executor_example.h  folly_svr.cpp  folly_svr.h
examples/folly/inspector/: CMakeLists.txt  inspector_cli.cpp  inspector_svr.cpp
examples/folly/server/: CMakeLists.txt  server.cpp  server.h
examples/hpx/: CMakeLists.txt
examples/hpx/basic/: CMakeLists.txt  main.cpp
examples/hpx/exec/: CMakeLists.txt  pipeline.cpp  scheduler.cpp
examples/hpx/taskflow/: CMakeLists.txt  main.cpp
examples/hpx/zpp/basic/: CMakeLists.txt  main.cpp
examples/nng/: CMakeLists.txt  README.md  engine.cpp  engine.h  msg_timer.hpp  pair1_dial_example.cpp  pair1_dial_example.h  pair1_example.h  pair1_listen_example.cpp  pair1_listen_example.h  protocol_example_common.h  pub.cpp  pub.h  pub_sub_device_example.cpp  pub_sub_device_example.h  publisher_example.cpp  publisher_example.h  puller_example.cpp  puller_example.h  pusher_example.cpp  pusher_example.h  replier_example.cpp  replier_example.h  requester_example.cpp  requester_example.h  sub.cpp  sub.h  subscriber_example.cpp  subscriber_example.h  task_foo.cpp  task_foo.h
examples/taskflow/: CMakeLists.txt  main.cpp
include/moodycamel/: blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h  obj_pool.h  scheduler.h  thread_pool.h
include/zpp/: error.h  json.h  json.hpp  namespace.h  spd_log.h  spdlog.h  types.h
include/zpp/STL/: fifo.h  mpmc.hpp  ring.hpp  spsc.hpp
include/zpp/core/: cmake_info.h  main.hpp  monitor.h  server.h
include/zpp/core/engine/: binder.h  namespace.h  obj_pool.h  operator.h  scheduler.h  thread_pool.h
include/zpp/core/inspection/: analyst.h  graph.h  inspector.h  mission.h  namespace.h  task.h  writer.h
include/zpp/core/memory/: aligned_malloc.hpp
include/zpp/core/monitor/: common_defs.h  tracker.h
include/zpp/coro/: awaiter.h  promise.h  task.h
include/zpp/folly/: async_scope.h  coro.h  cuda.h  inspector.h  io_buf.h  server.h
include/zpp/hpx/: main.hpp  server.hpp  server_lifecycle.hpp  spdlog.hpp
include/zpp/hpx/exec/: adapters.hpp  algorithms.hpp  consumers.hpp  core.hpp  exec.hpp  factories.hpp  schedulers.hpp
include/zpp/hpx/exec/detail/: hpx_compat.hpp
include/zpp/nng/: aio.h  aio_ctx.h  condition.h  context.h  defs.h  dialer.h  endpoint.h  engine.h  listener.h  log.h  message.h  misc.h  mutex.h  nng.h  pipe.h  piper.h  runtime.h  socket.h  socket_x.h  statistics.h  stream.h  task.h  task_timer.h  url.h  util.h
include/zpp/nng/protocols/: bus.h  pair.h  protocol.h  protocols.h  pub_sub_device.h  publisher.h  puller.h  pusher.h  replier.h  requester.h  respondent.h  subscriber.h  surveyor.h
include/zpp/system/: atomic_bit.h  cache_line_alignment.h  os.h  sleep.h  spin.h  system.h  tid.h  time.h  timer.hpp  tsc.h  wall_time.hpp
include/zpp/system/stopwatch/: stopwatch.h  stopwatch_chrono.h  stopwatch_tsc.h
include/zpp/taskflow/: observer_worker_status.hpp  pipeline_driver.hpp  pipeline_mpsc.hpp  worker_affine.hpp
include/zpp/wire/: msg_header.h  reader.h  size_counter.h  wire.h  writer.h
include/zpp/wire/detail/: endian.h
src/: CMakeLists.txt
src/folly/: CMakeLists.txt  inspector.cpp  server.cpp
src/hpx/: CMakeLists.txt
src/nng/: CMakeLists.txt  aio_ctx.cpp  context.cpp  dialer.cpp  endpoint.cpp  engine.cpp  global.cpp  listener.cpp  nng.cpp  pipe.cpp  runtime.cpp  socket.cpp  task_timer.cpp  url.cpp
src/nng/protocols/: bus_pair.cpp  pipeline.cpp  protocol.cpp  pub_sub_device.cpp  publisher.cpp  request_reply.cpp  subscriber.cpp  survey.cpp
src/zpp/: CMakeLists.txt  error.cpp
src/zpp/core/: monitor.cpp  server.cpp  spdguard.h  spdlog.cpp
src/zpp/core/monitor/: common_defs.cpp
src/zpp/system/: system.cpp  tid.cpp  tsc.cpp
tests/: CMakeLists.txt
tests/STL/: CMakeLists.txt
tests/STL/fifo_test/: CMakeLists.txt  benchmark_atomic_bit.cpp  benchmark_atomic_bit.h  stl_svr.cpp  stl_svr.h
tests/STL/pressure_spsc/: CMakeLists.txt  stl_svr.cpp  stl_svr.h
tests/coro/: CMakeLists.txt  awaiter_test.cpp  co_try_test.cpp  promise_test.cpp  task_test.cpp
tests/thread_pool/: CMakeLists.txt  behchmark_engine_fifo.h  benchmark_task.h  common.h  scheduler_benchmark_cque.h  scheduler_benchmark_cque_aop_class.h  thrp_svr.cpp  thrp_svr.h
tests/uni_svr/: CMakeLists.txt  test_json.cpp  test_system.cpp  test_timestamp.cpp  tests.h  uni_svr.cpp  uni_svr.h
tests/unit_tests/: CMakeLists.txt  TestMain.cpp  benchmark_cpu_executor.cpp  folly_coro_AsyncScope.cpp  folly_coro_test.cpp  hpx_exec_header_adapters.cpp  hpx_exec_header_algorithms.cpp  hpx_exec_header_consumers.cpp  hpx_exec_header_core.cpp  hpx_exec_header_exec.cpp  hpx_exec_header_factories.cpp  hpx_exec_header_schedulers.cpp  hpx_exec_runtime_test.cpp  hpx_exec_test.cpp  hpx_server_lifecycle_test.cpp  json_hpp_test.cpp  logging_active_level_test.cpp  logging_test.cpp  nng_endpoint_test.cpp  nng_protocol_test.cpp  nng_runtime_test.cpp  nng_task_test.cpp  nng_url_test.cpp  stl_queue_test.cpp  timer_test.cpp  timestamp_chorno_test.cpp  timestamp_counter_test.cpp  timestamp_stc_test.cpp  wall_time_legacy_test.cpp  wall_time_test.cpp  wire_msg_header_test.cpp  wire_reader_test.cpp  wire_size_counter_test.cpp  wire_writer_test.cpp
